<resources>
    <string name="app_name" translatable="false">TravelTracker_Project</string>
    <string name="landingpageimage" translatable="false">LandingPageImage</string>
    <string name="welcome_to_traveltracker">Welcome To TravelTracker</string>
    <string name="arcimg" translatable="false">ArcImg</string>
    <string name="TextPresentation">TravelTracker is a comprehensive travel tracking \n that provides you the ability to capture, organize, \n and analyze your travel experiences in depth.</string>
    <string name="log_in">Log-in</string>
    <string name="sign_in">Sign-up</string>
    <string name="copyrightimg" translatable="false">CopyrightImg</string>
    <string name="copyright" translatable="false">copyright</string>
    <string name="adventuresync_technologies_n_2018_2024" translatable="false">AdventureSync Technologies \n 2018-2024</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="airplaneright" translatable="false">AirPlaneRight</string>
    <string name="airplaneleft" translatable="false">AirPlaneLeft</string>
    <string name="your_username">your username</string>
    <string name="username">UserName :</string>
    <string name="password">Password :</string>
    <string name="your_password">your password</string>
    <string name="connection_panel">Connection Panel</string>
    <string name="open_the_magic_door_to_the_world_of_travel">Open the magic door to the world of travel ! (Continue) </string>
    <string name="previous">Previous</string>
    <string name="panneau_n_d_inscription">SignUp Panel</string>
    <string name="complete_my_registration">Complete my registration</string>
    <string name="first_name">First Name :</string>
    <string name="your_firstname">your firstname</string>
    <string name="lastname">LastName :</string>
    <string name="your_lastname">your lastName</string>
    <string name="userimg" translatable="false">userimg</string>
    <string name="HomePageText">Hello and welcome \n to TravelTracker - your favorite travel companion!</string>
    <string name="btnimg" translatable="false">BtnImg</string>
    <string name="voyage">Save a trip</string>
    <string name="history">History</string>
    <string name="quit">Quit</string>
    <string name="hi">Hi,</string>
    <string name="HomePresentationText">With TravelTracker, record your trips in one click and keep a history of all your adventures. Whether you\'re a globetrotter or a casual traveler, TravelTracker is here to make your travel experience easier and more enjoyable. Get started today and discover how TravelTracker can transform the way you travel.</string>
    <string name="imgdeco" translatable="false">ImgDeco</string>
    <string name="TitleSaveTripSteps">get ready to embark\n on the adventure 😆</string>
    <string name="next">Next</string>
    <string name="travel_start_date">Travel Start Date :</string>
    <string name="city_name">City Name :</string>
    <string name="country_name">Country Name :</string>
    <string name="ex_london">ex: London</string>
    <string name="ex_england">ex: England</string>
    <string name="ex_titleTrip">ex : walk in the city</string>
    <string name="TextViewTitleTrip">Title   of the trip :</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="summary">Summary</string>
    <string name="etimated_budget">Etimated budget :</string>
    <string name="budget_spent">Budget spent :</string>
    <string name="rate_the_accommodation">Rate the accommodation :</string>
    <string name="rate_the_ambiance">Rate the ambiance :</string>
    <string name="rate_the_quality_of_human_interactions">Rate the quality of human interactions :</string>
    <string name="rate_the_natural_beauty">Rate the natural beauty :</string>
    <string name="rate_the_safety_level">Rate the safety level :</string>
    <string name="ex_10" translatable="false">ex : 10 €</string>
    <string name="login_error">😢 Sorry, an error occurred. Please try again.</string>
    <string name="already_signup_error">You already have an account.</string>
    <string name="disconnect">Logout</string>
    <string name="your_past_adventure">Here are your\n Past Adventures\n 🌍</string>
    <string name="details_adventure">Here are the details of your adventure ✈️</string>
    <string name="note_the_accommodation">Note of the accommodation :</string>
    <string name="note_the_ambiance">Note of the ambiance :</string>
    <string name="note_the_quality_of_human_interactions">Note of the quality\n of human interactions :</string>
    <string name="note_the_natural_beauty">Note of the natural beauty :</string>
    <string name="note_the_safety_level">Note of the safety level :</string>
    <string name="travel_mood">Travel mood :</string>
    <string name="adventure_index">Adventure index :</string>
    <string name="average_total_score">Average Total Score :</string>
    <string name="delete">Delete this trip</string>
    <string name="travel_mood_adventurous">"Adventurous 🌍"</string>
    <string name="travel_mood_relaxed">Relaxed 🌴</string>
    <string name="travel_mood_cultural">Cultural 🏛️</string>
    <string name="travel_mood_romantic">Romantic 💖</string>
    <string name="travel_mood_family_friendly">Family Friendly 👨‍👩‍👧‍👦</string>
    <string name="trip_saved_successfully_message">Trip saved successfully</string>
    <string name="share">Share</string>
    <string name="travel_end_date">Travel End Date :</string>
    <string name="Friday">Friday</string>
    <string name="Monday">Monday</string>
    <string name="SATURDAY">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Thursday">Thursday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="activity_name">Activity name</string>
    <string name="difficult">Difficult</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="activity_1">Activity-1</string>
    <string name="activity_2">Activity-2</string>
    <string name="activity_3">Activity-3</string>
    <string name="activity_4">Activity-4</string>
    <string name="title_of_activity">Title of the Activity :</string>
    <string name="activity_approval">Does this activity require approval ?</string>
    <string name="days_of_the_week">Select the days of the week :</string>
    <string name="combien_de_temps_cette_activit_a_t_elle_pris">How much time this activity took to take ?</string>
    <string name="level_of_this_activity">What is the level of this activity ?</string>
    <string name="satisfaction_level">Select a satisfaction level :</string>
    <string name="invisble_text" translatable="false"><![CDATA[ ]]></string>
    <string name="people_on_trip">How many people were present on this trip ?</string>
    <string name="satisfaction_globals_cale">On a scale of 1 to 10, how would you rate your overall satisfaction with this trip:</string>
    <string name="transport_trip">What means of transport did you use to make this trip ?</string>
    <string name="fill_all_fields">Please fill all fields.</string>
    <string name="departure_before_arrival">The arrival date must be after the departure date.</string>
    <string name="choose_date">Please choose a date.</string>
    <string name="dangerous_activity">A dangerous activity, I see 👀</string>
    <string name="no_more_activities">You can no longer register more activities.</string>
    <string name="satisfaction_level_details">Satisfaction Level :</string>
    <string name="transport_used">Transport used :</string>
    <string name="toast_fill_activities">You should fill in at least 2 activities. 🚶‍♂️</string>
    <string name="creation_pdf_error">Error creating PDF️</string>
</resources>