<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arc_1"
        android:contentDescription="@string/arcimg" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="202dp"
        android:layout_height="201dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/landingpageimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/travel_landingpage_img" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/light_lavender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TextViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_to_traveltracker"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/TextViewPresentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/TextPresentation"
        android:textAlignment="center"
        android:textColor="#546E7A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewWelcome" />

    <Button
        android:id="@+id/ButtonContinue"
        android:layout_width="273dp"
        android:layout_height="84dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/violet"
        android:text="@string/open_the_magic_door_to_the_world_of_travel"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewPresentation"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/TextViewCopyRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/adventuresync_technologies_n_2018_2024"
        android:textAlignment="center"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ImageCopyRight"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/ImageCopyRight"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/copyright_symbol"
        android:contentDescription="@string/copyright" />

</androidx.constraintlayout.widget.ConstraintLayout>