<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".Activities.HomeActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="101dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/landingpageimage"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/travel_landingpage_img" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="238dp"
        android:layout_height="53dp"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/arcimg"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arc_3" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="241dp"
        android:layout_height="53dp"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/arcimg"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arc_3" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-15dp"
        android:background="@color/light_lavender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewWelcomeHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/HomePageText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/textViewDisplayUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[USERNAME]"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toEndOf="@+id/textViewHi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/textViewDisplayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[DATE]"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toEndOf="@+id/textViewDisplayUserName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@color/light_lavender"
        app:layout_constraintBottom_toTopOf="@+id/textViewWelcomeHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view5">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="145dp"
            android:layout_margin="10dp"
            android:backgroundTint="#ffffff"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp">

                    <Button
                        android:id="@+id/buttonTravel"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:backgroundTint="@color/violet"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="36dp"
                        android:layout_height="42dp"
                        android:contentDescription="@string/btnimg"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_myplaces"
                        tools:ignore="ImageContrastCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textViewTravel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/voyage"
                    android:textColor="#5d5a63"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="145dp"
            android:layout_margin="10dp"
            android:backgroundTint="#ffffff"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp">

                    <Button
                        android:id="@+id/buttonHistory"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:backgroundTint="@color/violet"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="34dp"
                        android:layout_height="39dp"
                        android:contentDescription="@string/btnimg"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textViewProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textColor="#5d5a63"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/TextViewCopyRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/adventuresync_technologies_n_2018_2024"
        android:textAlignment="center"
        android:textColor="#5d5a63"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ImageCopyRight"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/ImageCopyRight"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/copyright_symbol" />

    <Button
        android:id="@+id/buttonQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/violet"
        android:text="@string/quit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDisconnect"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewHomePresentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/HomePresentationText"
        android:textAlignment="center"
        android:textColor="@color/Dark_blue_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.281"
        app:layout_constraintWidth_max="500dp" />

    <TextView
        android:id="@+id/textViewHi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/violet"
        android:text="@string/disconnect"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>